syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package doctorPagerService;

option java_package = "ar.edu.itba.pod.tpe1.doctorPager";
option java_outer_classname = "DoctorPagerServiceModel";
option java_multiple_files = true;

service DoctorPagerService {
  rpc Register(DoctorPagerRequest) returns (stream DoctorPagerResponse);
  rpc Unregister(DoctorPagerRequest) returns (DoctorPagerRequest);
}

message DoctorPagerRequest {
  string doctorName = 1;
}

message DoctorPagerResponse {
  string message = 1;
}